SWT client bugfixing + starting auto deal when second player sits in Basic play with SWT client is possible. (Use TestSWTClient for fast automatic login of 2 players)
Remaining bugs I found:
Call from small blind preflop ends the preflop round, big blind can not act
Allin raise causes exception ("can not raise with x chips")
Sit in / Sit out and leave game / join table use cases need to be separated more clearly.